# website

./: .dockerignore  .editorconfig  .env  .gitignore  .golangci.yml  Cargo.toml  Dockerfile  Makefile  Procfile  README.md  babel.config.js  bootstrap.sh  default.nix  docker-compose.test.yml  docker-compose.yml  facts.txt  flake.nix  generate.go  go.mod  go.sum  homelab.k8s.yml  jest.config.ts  main.go  mkdocs.yml  package.json  requests.http  shell.nix  site.js  tsconfig.json  webpack.config.js
.do/: app.yml
.github/workflows/: ansible-ci.yml  build.yml  ci.yml  lint.yml  publish.yml  test.yml
app/: api.go  api_test.go  app.go  app_test.go  chat.go  config.go  invite.go  invite_test.go  logs.go  routes.go  session.go  user.go  util.go
app/chat/: channel.go  chat.go  chat_test.go  comms_test.go
cmd/api/: .gitignore  _main.go  main.go
cmd/backups/: background.go  backups_test.go  main.go  postgres.go
cmd/build-hook/: index.html  main.go  session.go
cmd/certs/: main.go  main_test.go  ocsp.go
cmd/chat/: main.go
cmd/csrf/: README.md  index.html  main.go
cmd/foreman/: Cargo.toml
cmd/geoip/: main.go  main_test.go
cmd/geoipupdate/: Dockerfile  client.go  go.mod  go.sum  main.go  s3fs.go
cmd/hooks/: github.go  index.html  login.html  main.go  main_test.go  minio.go
cmd/key-gen/: main.go
cmd/legacy-site/: main.go
cmd/mail/: main.go
cmd/provision/: docker.go  main.go  main_test.go  migrate.go  postgres.go  router.go  s3.go  util.go
cmd/proxy/: main.go
cmd/pwhash/: main.go
cmd/user-gen/: main.go
cmd/vanity-imports/: index.html  main.go  main_test.go
cmd/ws/: main.go
config/: docker-compose.ci.yml  docker-compose.infra.yml  docker-compose.logging.yml  docker-compose.outline.yml  docker-compose.owncloud.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.tools.yml  docker-root-ca.pem  golangci.yml  jest.config.ts  openssl.cnf  provision.dev.json  provision.hcl  provision.json  registry-ca.crt  yamllint.yml
config/ansible/: Dockerfile  Makefile  ansible-lint.yml  ansible.cfg  aws-dev.yml  aws-inventory.py  inventory.yml  main.yml  registry.yml  requirements.txt  site.yml  stg-inventory.yml  stg.yml  test.yml
config/docker/: Dockerfile.curl  Dockerfile.db  Dockerfile.fluentbit  Dockerfile.fluentd  Dockerfile.grafana  Dockerfile.latex  Dockerfile.loki  Dockerfile.outline  Dockerfile.prometheus  Dockerfile.wp-cli  buildx.yml  compose.services.yml  dev.yml  docker-bake.hcl  docker-compose.extras.yml  healthchecks.yml  logging.yml  prod.yml  registry.yml
config/env/: .gitignore  api.env  db-backup.env  db.env  github.env  grafana.env  hooks.env  hydra.env  jwt.env  loki.env  maxmind.env  minio.env  redis.env  registry.env  swarm_data.env
config/grafana/: Dockerfile  dashboards.yml  datasources.yml  grafana.ini
config/helm/: .gitignore  .helmignore  Chart.yaml  Makefile  README.md  values.prd.yaml  values.stg.yaml  values.yaml
config/hydra/: .gitignore  hydra.yml
config/k8s/: .gitignore  Makefile  README.md  cert-volumes.yml  geoip.yml  k3d.yml  kustomization.yml  manifests.sh  nginx.yml
config/logging/: fluent-bit.conf  fluentd.conf  grafana.ini  loki.yml  prometheus.yml
config/nginx/: .passwd  Makefile  docker-entrypoint.sh  metrics.passwd  nginx.conf
config/nix/: compat.nix  freeradius.nix  kubeval.nix  mc.nix  mockgen.nix
config/nomad/: Dockerfile  agent.hcl  nginx.hcl  ping.nomad
config/redis/: Dockerfile  common.env  create-cluster.sh  docker-compose.yml  entrypoint.sh  node-entrypoint.sh  sentinel-entrypoint.sh
config/registry/: Dockerfile  config.yml  entrypoint.sh  token-config.yml
config/vault/: docker-compose.yml  server.hcl
db/: init.sql  load-movies-data.sql
db/migrations/: 000001_init.up.sql  000002_log_user_uuid.down.sql  000003_chat_room.up.sql  000003_unique_email.up.sql  000004_chat_room.up.sql  000005_int_roles.down.sql  000005_int_roles.up.sql  migrations.go
db/postgres/: init.sql
docs/: common-issues.md  external-references.md  index.md  notes.md  router.md
embeds/: harry.html
embeds/keys/: pub.asc
files/: .gitignore  bookmarks.json  files.go  remora.drawio  resume.tex
frontend/: .gitignore  auth.ts  index.html  jest.config.ts  main.css  main.ts  manifest.json  package.json  remora.ts  site.js  theme.ts  tsconfig.json  util.ts  webpack.config.js
frontend/1k/: index.html
frontend/@types/: dom.d.ts
frontend/api/: api.test.ts  auth.test.ts  auth.ts  bookmarks.ts  chat.ts  index.ts  logs.ts  package.json
frontend/components/: InputForm.ts  modal.ts  theme.css  theme.ts  toggle.css  win95.css  win95.ts
frontend/config/: babel.config.js  build.js  webpack.common.js
frontend/img/: index.ts
frontend/legacy/: embeds.go  index.html  jest.config.mjs  jest.config.ts  main.ts  package.json  (+2 more)
public/: robots.txt
scripts/: backup.sh  build.js  build.sh  buildx.sh  certs.sh  configure.sh  deployment  diagrams.sh  etc-hosts.sh  expose-k8s.sh  functional-setup.sh  functional-tests.sh  functional.sh  heroku-api.sh  htpasswd  install-tools.sh  migrate.sh  mockgen.sh  psql.sh  redis-cli.sh  setup.sh  sourcehash.sh  tag-images.sh  test-build.sh  wait.sh
services/: .gitignore
services/geoip/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.legacy
services/geoip/src/: geoip.rs  ip.rs  locale.rs  logging.rs  main.rs  models.rs  s3.rs  tests.rs
services/geoipupdate/: Cargo.toml  Dockerfile
services/geoipupdate/src/: main.rs
services/gopkg/: Cargo.toml
services/gopkg/src/: index.html  main.rs
services/lnsmol/: Cargo.toml
services/lnsmol/src/: client.rs  link.rs  main.rs  nanoid.rs
services/lnsmol/templates/: base.html  create.html  link.html  link.js  new.html
templates/: nav.html
terraform/: .gitignore  .terraform.lock.hcl  bsky.tf  cloudflare.auto.tfvars  cloudflare.tf  emails.tf  h3y.sh.tf  hrry.dev.tf  hrry.io.tf  hrry.lol.tf  hrry.me.tf  main.tf  r2.tf  variables.tf  willmusic.education.tf
test/: config.py  conftest.py  db.py  models.py  oidc.py  pkce.py  pyproject.toml
test/functional/: test_auth.py  test_geoip.py  test_invites.py  test_pages.py
(+826 files in other folders)
