[tool.poetry]
name = "harrybrwn.com-tests"
version = "0.0.1"
description = ""
authors = ["Harry Brown <harrybrown98@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bcrypt = "^3.2.0"
psycopg2 = "^2.9.3"
pytest-xdist = "^2.5.0"
redis = "^4.4.4"
websockets = "^10.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
