[package]
name = "geoip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-web-prom = "0.6.0"
anyhow = "1.0.69"
aws-config = "0.55.1"
aws-sdk-s3 = "0.26.0"
clap = { version = "4.1.8", features = ["derive", "env"] }
log = {version = "0.4.17", features = ["std", "kv_unstable_serde"]}
maxminddb = "0.23.0"
serde = "1.0.164"
serde_json = "1.0.96"
slog = "2.7.0"
slog-json = "2.6.1"
url = "2.3.1"
