[package]
name = "geoip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-web-prom = "0.7.0"
anyhow = "1.0.69"
aws-config = "0.55.2"
aws-sdk-s3 = "0.27.0"
clap = { version = "4.4.0", features = ["derive", "env"] }
log = {version = "0.4.20", features = ["std", "kv_unstable_serde"]}
maxminddb = "0.23.0"
serde = "1.0.164"
serde_json = "1.0.96"
slog = "2.7.0"
slog-json = "2.6.1"
url = "2.4.1"
