[package]
name = "gopkg"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-web-prom = "0.6.0"
clap = { version = "4.3.2", features = ["derive", "env"] }
env_logger = "0.10.0"
log = {version = "0.4.18", features = ["std", "kv_unstable_serde"]}
serde = "1.0.164"
serde_derive = "1.0.164"
tera = "1.19.0"
