[package]
name = "gopkg"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-http = "3.5.1"
actix-service = "2.0.2"
actix-web = "4.3.1"
actix-web-prom = "0.7.0"
clap = { version = "4.4.0", features = ["derive", "env"] }
env_logger = "0.10.0"
log = {version = "0.4.20", features = ["std", "kv_unstable_serde"]}
serde = "1.0.164"
serde_derive = "1.0.188"
tera = "1.19.0"
